kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: test-html
    labels:
        app: nginx
        env: development
        tier: frontend
spec:
    replicas: 1
    selector:
        matchLabels:
            app: nginx
            env: development
            tier: frontend
    template:
        metadata:
            labels:
                app: nginx
                env: development
                tier: frontend
        spec:
            containers:
                - name: nginx
                  image: rgx69/test-nginx:latest
                  ports:
                      - containerPort: 80
            imagePullSecrets:
                - name: regcred
