kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
    name: test-html
    labels:
        app: nginx
        env: development
        tier: frontend
spec:
    selector:
        app: nginx
        env: development
        tier: frontend
    ports:
        - protocol: TCP
          port: 80
          targetPort: 80
    type: NodePort
