kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: portal
spec:
    ingressClassName: nginx
    rules:
        - host: test-argu.com
          http:
              paths:
                  - path: /
                    pathType: Prefix
                    backend:
                        service:
                            name: test-html
                            port:
                                number: 80
